# todo_fastapi

./: README.md  pyproject.toml
app/: models.py  schemas.py
